--- a/omegasoft_contract_employee_seniority/i18n/es.po
+++ b/omegasoft_contract_employee_seniority/i18n/es.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-13 20:00+0000\n"
 "PO-Revision-Date: 2022-10-13 20:00+0000\n"
