--- a/omegasoft_hr_employee_code/i18n/es.po
+++ b/omegasoft_hr_employee_code/i18n/es.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-30 14:53+0000\n"
 "PO-Revision-Date: 2023-03-30 14:53+0000\n"
