--- a/omegasoft_payroll_res_config_settings/i18n/es.po
+++ b/omegasoft_payroll_res_config_settings/i18n/es.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-04-06 13:54+0000\n"
 "PO-Revision-Date: 2023-04-06 13:54+0000\n"
