--- a/l10n_ve_config_withholding/i18n/l10n_ve_config_withholding.pot
+++ b/l10n_ve_config_withholding/i18n/l10n_ve_config_withholding.pot
@@ -17,7 +17,7 @@ msgstr ""
 
 #. module: l10n_ve_config_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ve_config_withholding.res_config_settings_view_form
-msgid "<span class=\"o_form_label\">Firma y sello de la compañía</span>"
+msgid "<span class=\"o_form_label\">Signature and seal of the company</span>"
 msgstr ""
 
 #. module: l10n_ve_config_withholding
@@ -37,7 +37,7 @@ msgstr ""
 
 #. module: l10n_ve_config_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ve_config_withholding.res_config_settings_view_form
-msgid "Firma y sello digital utilizado para comprobantes de retención."
+msgid "Digital signature and seal used for withholding receipts."
 msgstr ""
 
 #. module: l10n_ve_config_withholding
@@ -50,7 +50,7 @@ msgstr ""
 #. module: l10n_ve_config_withholding
 #: model:ir.model.fields,field_description:l10n_ve_config_withholding.field_res_company__sign_512
 #: model:ir.model.fields,field_description:l10n_ve_config_withholding.field_res_config_settings__sign_512
-msgid "Insertar imagen"
+msgid "Insert image"
 msgstr ""
 
 #. module: l10n_ve_config_withholding
@@ -72,11 +72,11 @@ msgstr ""
 #. module: l10n_ve_config_withholding
 #: model_terms:ir.ui.view,arch_db:l10n_ve_config_withholding.res_config_settings_view_form
 #: model_terms:ir.ui.view,arch_db:l10n_ve_config_withholding.view_partner_form
-msgid "Retenciones"
+msgid "Withholdings"
 msgstr ""
 
 #. module: l10n_ve_config_withholding
 #: model:ir.model.fields,field_description:l10n_ve_config_withholding.field_account_bank_statement_import_journal_creation__withholding_journal_type
 #: model:ir.model.fields,field_description:l10n_ve_config_withholding.field_account_journal__withholding_journal_type
-msgid "Tipo de diario retenciones"
+msgid "Type of withholding journal"
 msgstr ""
