[ADD] Added more improvements about the i18n support for the l10n_ve_dual_currency module

--- a/l10n_ve_dual_currency/i18n/es_VE.po
+++ b/l10n_ve_dual_currency/i18n/es_VE.po
@@ -29,19 +29,19 @@ msgstr "Importe Ref"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move_line__balance_ref
-msgid "Balance ope."
+msgid "Ope. balance"
 msgstr "Balance ope."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_bank_statement_line__amount_untaxed_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move__amount_untaxed_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment__amount_untaxed_ref
-msgid "Base imponible ope."
+msgid "Ope. taxable base"
 msgstr "Base imponible ope."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move_line__tax_base_amount_ref
-msgid "Base ope."
+msgid "Ope. base"
 msgstr "Base ope."
 
 #. module: l10n_ve_dual_currency
@@ -53,17 +53,17 @@ msgstr "Ref de moneda de costo"
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_product__standard_price_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_template__standard_price_ref
-msgid "Coste op."
+msgid "Op. cost"
 msgstr "Coste op."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_product__avg_cost_ref
-msgid "Costo unitario op."
+msgid "Op. unit cost"
 msgstr "Costo unitario op."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move_line__credit_ref
-msgid "Crédito ope."
+msgid "Ope. credit"
 msgstr "Crédito ope."
 
 #. module: l10n_ve_dual_currency
@@ -85,7 +85,7 @@ msgstr "Ref de moneda"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move_line__debit_ref
-msgid "Débito ope."
+msgid "Ope. debit"
 msgstr "Débito ope."
 
 #. module: l10n_ve_dual_currency
@@ -93,12 +93,12 @@ msgstr "Débito ope."
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move__amount_residual_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move_line__amount_residual_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment__amount_residual_ref
-msgid "Importe adeudado ope."
+msgid "Ope. amount owed"
 msgstr "Importe adeudado ope."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment__amount_ref
-msgid "Importe referencia"
+msgid "Reference amount"
 msgstr "Importe referencia"
 
 #. module: l10n_ve_dual_currency
@@ -121,7 +121,7 @@ msgstr "Apunte contable"
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_purchase_order__currency_ref_id
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_sale_order__currency_ref_id
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_stock_valuation_layer__currency_ref_id
-msgid "Moneda operativa"
+msgid "Operating currency"
 msgstr "Moneda operativa"
 
 #. module: l10n_ve_dual_currency
@@ -142,12 +142,12 @@ msgstr "Pagos"
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_product__list_price_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_template__list_price_ref
-msgid "Precio de venta op."
+msgid "Op. sale price"
 msgstr "Precio de venta op."
 
 #. module: l10n_ve_dual_currency
 #: model_terms:ir.ui.view,arch_db:l10n_ve_dual_currency.product_template_kanban_view
-msgid "Precio op.:"
+msgid "Op. Price:"
 msgstr "Precio op.:"
 
 #. module: l10n_ve_dual_currency
@@ -217,12 +217,12 @@ msgstr "Capa de valoración de stock"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment_register__currency_rate_ref
-msgid "Tasa"
+msgid "Rate"
 msgstr "Tasa"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_res_currency_rate__is_bcv_rate
-msgid "Tasa BCV"
+msgid "BCV Rate"
 msgstr "Tasa BCV"
 
 #. module: l10n_ve_dual_currency
@@ -233,14 +233,14 @@ msgstr "Tasa BCV"
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_purchase_order__currency_rate_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_sale_order__currency_rate_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_stock_landed_cost_lines__currency_rate_ref
-msgid "Tasa de cambio"
+msgid "Exchange rate"
 msgstr "Tasa de cambio"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_bank_statement_line__global_rate_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move__global_rate_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment__global_rate_ref
-msgid "Tasa global"
+msgid "Global rate"
 msgstr "Tasa global"
 
 #. module: l10n_ve_dual_currency
@@ -260,25 +260,25 @@ msgstr "Ref de Débito Total"
 
 #. module: l10n_ve_dual_currency
 #: model_terms:ir.ui.view,arch_db:l10n_ve_dual_currency.product_product_stock_tree_inherit_stock_account
-msgid "Total op"
+msgid "Op Total"
 msgstr "Total op"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_bank_statement_line__amount_total_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_move__amount_total_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_account_payment__amount_total_ref
-msgid "Total ope."
+msgid "Ope. Total"
 msgstr "Total ope."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_product_product__total_value_ref
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_stock_valuation_layer__value_ref
-msgid "Valor total op."
+msgid "Op. total value"
 msgstr "Valor total op."
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.fields,field_description:l10n_ve_dual_currency.field_stock_valuation_layer__unit_cost_ref
-msgid "Valor unitario op."
+msgid "Op. unit value"
 msgstr "Valor unitario op."
 
 #. module: l10n_ve_dual_currency
@@ -293,5 +293,5 @@ msgstr "Value Svl Ref"
 
 #. module: l10n_ve_dual_currency
 #: model:ir.model.constraint,message:l10n_ve_dual_currency.constraint_account_move_line_check_credit_debit_ref
-msgid "Wrong credit or debit value in accounting entry !"
+msgid "Wrong credit or debit value in accounting entry!"
 msgstr "¡Valor de crédito o débito incorrecto en el asiento contable!"
