--- a/l10n_ve_fiscal_identification/i18n/l10n_ve_fiscal_identification.pot
+++ b/l10n_ve_fiscal_identification/i18n/l10n_ve_fiscal_identification.pot
@@ -19,35 +19,35 @@ msgstr ""
 #: model:ir.model.constraint,message:l10n_ve_fiscal_identification.constraint_res_partner_unique_identification
 msgid ""
 "\n"
-"Ya existe un contacto con el mismo Documento de identidad !"
+"There is already a contact with the same ID!"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.constraint,message:l10n_ve_fiscal_identification.constraint_res_partner_unique_vat
 msgid ""
 "\n"
-"Ya existe un contacto con el mismo RIF !"
+"There is already a contact with the same RIF!"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_partner__partner_type
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_users__partner_type
-msgid "Clasificación comercial"
+msgid "Commercial classification"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields.selection,name:l10n_ve_fiscal_identification.selection__res_partner__partner_type__customer
-msgid "Cliente"
+msgid "Customer"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields.selection,name:l10n_ve_fiscal_identification.selection__res_partner__partner_type__customer_supplier
-msgid "Cliente / Proveedor"
+msgid "Customer / Provider"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model_terms:ir.ui.view,arch_db:l10n_ve_fiscal_identification.res_partner_view_search
-msgid "Clientes"
+msgid "Customers"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
@@ -84,7 +84,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_person_type__code
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_partner__person_type_code
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_users__person_type_code
-msgid "Código"
+msgid "Code"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
@@ -95,17 +95,17 @@ msgstr ""
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_partner__identification
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_users__identification
-msgid "Documento de identidad"
+msgid "Identity document"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model_terms:ir.ui.view,arch_db:l10n_ve_fiscal_identification.view_partner_form
-msgid "Ej. J-12345678-9"
+msgid "Ex. J-12345678-9"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_person_type__is_company
-msgid "Es compañía"
+msgid "It's company"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
@@ -145,12 +145,12 @@ msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields.selection,name:l10n_ve_fiscal_identification.selection__res_partner__partner_type__supplier
-msgid "Proveedor"
+msgid "Provider"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model_terms:ir.ui.view,arch_db:l10n_ve_fiscal_identification.res_partner_view_search
-msgid "Proveedores"
+msgid "Providers"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
@@ -180,14 +180,14 @@ msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_person_type__name
-msgid "Tipo"
+msgid "Type"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
 #: model:ir.model,name:l10n_ve_fiscal_identification.model_person_type
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_partner__person_type_id
 #: model:ir.model.fields,field_description:l10n_ve_fiscal_identification.field_res_users__person_type_id
-msgid "Tipo de persona"
+msgid "Type of person"
 msgstr ""
 
 #. module: l10n_ve_fiscal_identification
