[ADD] Added more improvements about the i18n support for the l10n_ve_withholding_igtf module

--- a/l10n_ve_withholding_igtf/i18n/es_VE.po
+++ b/l10n_ve_withholding_igtf/i18n/es_VE.po
@@ -19,14 +19,14 @@ msgstr ""
 
 #. module: l10n_ve_withholding_igtf
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_igtf.view_account_payment_form
-msgid "<span class=\"o_stat_text\">Asiento IGTF</span>"
+msgid "<span class=\"o_stat_text\">IGTF Entry</span>"
 msgstr "<span class=\"o_stat_text\">Asiento IGTF</span>"
 
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_config_settings__apply_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_partner__apply_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_users__apply_igtf
-msgid "Agente de percepción de IGTF"
+msgid "IGTF Perception Agent"
 msgstr "Agente de percepción de IGTF"
 
 #. module: l10n_ve_withholding_igtf
@@ -37,7 +37,7 @@ msgstr "Aplicar IGTF"
 
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment__igtf_move_id
-msgid "Asiento IGTF"
+msgid "IGTF Entry"
 msgstr "Asiento IGTF"
 
 #. module: l10n_ve_withholding_igtf
@@ -70,19 +70,19 @@ msgstr "Contacto"
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_company__igtf_inbound_account_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_config_settings__igtf_inbound_account_id
-msgid "Cuenta Recibos IGTF"
+msgid "IGTF Receipt Account"
 msgstr "Cuenta Recibos IGTF"
 
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_company__igtf_outbound_account_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_config_settings__igtf_outbound_account_id
-msgid "Cuenta pagos IGTF"
+msgid "IGTF payment account"
 msgstr "Cuenta pagos IGTF"
 
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment__igtf_journal_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment_register__igtf_journal_id
-msgid "Diario IGTF"
+msgid "IGTF Journal"
 msgstr "Diario IGTF"
 
 #. module: l10n_ve_withholding_igtf
@@ -93,7 +93,7 @@ msgstr "IGTF"
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment__igtf_amount
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment_register__igtf_amount
-msgid "Importe IGTF"
+msgid "IGTF amount"
 msgstr "Importe IGTF"
 
 #. module: l10n_ve_withholding_igtf
@@ -104,13 +104,13 @@ msgstr "Pagos"
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment__calculate_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_account_payment_register__calculate_igtf
-msgid "Permitir IGTF"
+msgid "Allow IGTF"
 msgstr "Permitir IGTF"
 
 #. module: l10n_ve_withholding_igtf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_company__igtf_percentage
 #: model:ir.model.fields,field_description:l10n_ve_withholding_igtf.field_res_config_settings__igtf_percentage
-msgid "Porcentaje IGTF"
+msgid "IGTF percentage"
 msgstr "Porcentaje IGTF"
 
 #. module: l10n_ve_withholding_igtf
@@ -121,5 +121,5 @@ msgstr "Registrar pago"
 #. module: l10n_ve_withholding_igtf
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_igtf.view_account_payment_form
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_igtf.view_account_payment_register_form
-msgid "importe IGTF)"
-msgstr "importe (IGTF)"
+msgid "IGTF amount)"
+msgstr "importe IGTF)"
