--- a/l10n_ve_withholding_itf/i18n/l10n_ve_withholding_itf.pot
+++ b/l10n_ve_withholding_itf/i18n/l10n_ve_withholding_itf.pot
@@ -17,7 +17,7 @@ msgstr ""
 
 #. module: l10n_ve_withholding_itf
 #: model_terms:ir.ui.view,arch_db:l10n_ve_withholding_itf.view_account_payment_form
-msgid "<span class=\"o_stat_text\">Asiento ITF</span>"
+msgid "<span class=\"o_stat_text\">ITF Entry</span>"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
@@ -28,7 +28,7 @@ msgstr ""
 
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_account_payment__itf_move_id
-msgid "Asiento ITF"
+msgid "ITF Entry"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
@@ -44,14 +44,14 @@ msgstr ""
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_company__itf_account_id
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_config_settings__itf_account_id
-msgid "Cuenta ITF"
+msgid "ITF Account"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.constraint,message:l10n_ve_withholding_itf.constraint_res_company_check_apply_itf
 msgid ""
-"El porcentaje de retención ITF debe estar en un rango mayor a 0 y menor o "
-"igual a 100 y la cuenta ITF es requerida !"
+"The ITF retention percentage must be in a higher range to 0 and less or "
+"equal to 100 and ITF account is required!"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
@@ -62,13 +62,13 @@ msgstr ""
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_account_payment__calculate_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_account_payment_register__calculate_itf
-msgid "Permitir ITF"
+msgid "Allow ITF"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_company__itf_percentage
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_config_settings__itf_percentage
-msgid "Porcentaje ITF"
+msgid "ITF Percentage"
 msgstr ""
 
 #. module: l10n_ve_withholding_itf
@@ -79,5 +79,5 @@ msgstr ""
 #. module: l10n_ve_withholding_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_company__apply_itf
 #: model:ir.model.fields,field_description:l10n_ve_withholding_itf.field_res_config_settings__apply_itf
-msgid "Retención automática de ITF"
+msgid "Automatic retention of ITF"
 msgstr ""
